Add runEcdsa task to Java and Kotlin examples build.gradle